# trader-monorepo

./: .dokku-monorepo  .env  .gitignore  .gitmodules  README.md  deploy-etl-stage.sh  deploy-ex-stage.sh  docker-compose.common.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  dokku-shell.sh  encrypt_credentials.sh  startdev.sh
ah/: Dockerfile
api/: .dockerignore  Dockerfile  Procfile  builddev.sh  debug.sh  entrypoint.py  loadenv.py  makemigrations.sh  migrate.sh  pylama.ini  pyproject.toml  run.sh  scheduler.py  setup.sh  shell-timescale.sh  shell.py  supervisord.conf  test_concurrency.py  test_gather.py  test_influxdb.py  test_interproc.py  test_migrations.py  test_timer.py  test_timescaledb.py
api/alembic/: env.py
api/alembic/versions/: 18e4c67f96cb_.py  20e592bb0fe7_.py  26910f250a09_.py  26ab60da29c5_.py  330a5e5e83a4_.py  37056842ab4d_.py  425ff5e5e715_.py  446be3b85c95_.py  47970e597206_.py  5bd7a5db869b_.py  68aea307b476_.py  7a32a9c032b3_.py  8aec74ca10a5_.py  a32429525c6d_.py  a35cbd2ae378_.py  ae1979d9da38_.py  c1cf8d0f73e5_.py  f5a91540a39d_.py  f8b14aae418d_.py
api/dbmodels/: common_models.py  db.py  db_init.py  order_executor_models.py  schemas.py  session_models.py  source_models.py  strategy_models.py  strategy_params_models.py
api/exchanges/: base_exchanche.py  kuna_exchange.py
api/handlers/: __init__.py
api/parameters/: enums.py
api/repl/: timescale.py
api/routes/: routes.py
api/scripts/: timescale-repl.sh
api/secrets_management/: manage.py
api/server/: errors_middleware.py  init.py  routes.py  security.py
api/server/endpoints/: backtesting.py  resources.py  routedef.py  sessions.py  sources.py  strategies.py
api/server/services/: resources_db.py  sessions_db.py  sources_db.py
api/server/utils/: streaming.py
api/strategies/: common.py  monitor_strategy.py  monitor_strategy_signal.py
api/ticker/: backtest_loop.py  backtest_trader.py  main_loop.py  timing.py
api/ticker/processing/: default_postprocessor.py  process_ticks.py
api/ticker/sourcing/: cached_source_loader.py  default_source_loader.py
api/trader/: __init__.py  routes.py
api/utils/: async_primitives.py  formatting.py  initializators.py  test_utils.py
api/utils/mocks/: ticks.py
api/utils/processing/: async_queue.py  processor.py
api/utils/profiling/: queues.py  timer.py
api/utils/schemas/: dataflow_schemas.py  request_schemas.py  response_schemas.py  timeseries_schemas.py
api/utils/sources/: abstract_source.py  bigquery_source.py  live_sources.py  select.py
api/utils/sources/mock_sources/: test_arbitrage_sources.py
api/utils/timescaledb/: tsdb_manage.py  tsdb_mocks.py  tsdb_read.py  tsdb_write.py
api/utils/timeseries/: constants.py  pandas_utils.py  timescale_utils.py
auth0/: next.config.js  package.json  server.js
backend/: .gitignore  Dockerfile  api.py  debug.py  docker-compose.yml  entrypoint.py  makemigrations.sh  migrate.sh  pyproject.toml  shell.py  test_migrations.py
backend/alembic/: env.py
backend/alembic/versions/: e62b7e13a8b2_baseline.py
backend/auth/: apiAuth.py
backend/dbmodels/: db.py
backend/handlers/: __init__.py  api.py
backend/models/: api.py  terminal.py
backend/mypackage/: run.py
backend/scripts/: migrate.sh
backend/server/: routes.py  security.py
backend/taskmanager/: __init__.py
backend/view/: api.py  routes.py
etl/: .dockerignore  Dockerfile  build.sh  builddev.sh  debug.py  debug.sh  debug_pycharm.py  debugp.sh  deploy.sh  docker-compose.yml  entrypoint.py  project-setup.sh  pyproject.toml  run.sh  shell.py  test_bufferizer.py
etl/.encrypted/: keyring.json
etl/constants/: currencies.py  formats.py  periods.py  remote.py
etl/datatypes/: cache.py
etl/formats/: time.py
etl/secrets_management/: __init__.py
etl/sources/: historical.py
etl/stores/bigquery/: __init__.py  adapters.py  schemas.py  table_operations.py  write_data.py
etl/tasks/: collect.py  datascraper.py
frontend/: .buildpacks  .env.template  .gitignore  .nowignore  Dockerfile  app.json  binaryMimeTypes.js  docker-compose.yml  jsconfig.json  next.config.js  now.json  package-lock.json  package.json  rollup.config.js  server.js  webpack.config.js
frontend2/: .gitignore  package-lock.json  package.json  webpack.config.js
my-node-server-project/: README.md  now.json
nextf/: .gitignore  (+2 more)
(+122 files in other folders)
