[tool.poetry]
name = "livewater-backend"
version = "0.1.0"
description = "Backend for arbitrage based trader"
authors = ["Alex Bausk <bauskas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry==0.12"]
build-backend = "poetry.masonry.api"
