[tool.poetry]
name = "trader-etl-service"
version = "0.1.0"
description = "Permanently running ETL service for experimental trader project"
authors = ["Alex Bausk <bauskas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
sanic = "^19.6"

[tool.poetry.dev-dependencies]
ptvsd = "^4.2"
pydevd-pycharm = "192.5587.24"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
